--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,7 @@ ifdef::env-github[]
 :source-highlighter: :rouge:
 endif::[]
 
-= Personal Curriculum Vitae
+= Personal Resume
 
 == Building Process
 
