--- a/DiegoDorta_Resume.adoc
+++ b/DiegoDorta_Resume.adoc
@@ -1,6 +1,6 @@
 = Diego Dorta
 © 2020 Diego Dorta
-REV 1.8, February 23, 2021
+REV 1.9, March 1st, 2021
 :!doctype: article
 :reproducible:
 :!toc2:
